--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr"
-style="
-background: linear-gradient(to top, rgb(1253,234,103),);">
+style="backgroud-color: rgb(1253,234,103);
+background: linear-gradient(to top , rgb(1253,234,103),);">
   <head>
     <meta charset="utf-8">
     <title> freefox </title>
