--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@ challenging career that will demand the best of professional ability in terms of
                         <h2>Anusha B</h2>
                         <h3>alanahalli, mysuru, karnataka.</h3>
                          <div class="footer-social"><div class="footer-menu">
-                          <a href="href="tel:9019857187" target='_blank'><p><i class="fa fa-phone"></i>call me : 9019857187</p></a>
-                            <a href="mailto:anusha16102000@gmail.com" target='_blank'><p> <i class="fa fa-envelope"></i>  anusha16102000@gmail.com</p></a>
+                          <a href="href="tel:9019857187"><p><i class="fa fa-phone"></i>call me : 9019857187</p></a>
+                            <a href="mailto:anusha16102000@gmail.com" ><p> <i class="fa fa-envelope"></i>  anusha16102000@gmail.com</p></a>
                         </div>
                        
                             
